--- a/css/main.css
+++ b/css/main.css
@@ -76,10 +76,70 @@
   background-color: #006aaf;
 }
 
+.loader__container {
+  margin-left: 420px;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  animation: prixClipFix 2s linear infinite;
+}
+.loader::after {
+  transform: rotate3d(90, 90, 0, 180deg);
+  border-color: #ff3d00;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+}
+
 @media only screen and (max-width: 1300px) {
   .container {
     padding-left: 40px;
     padding-right: 40px;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .loader__container {
+    margin-left: 360px;
   }
 }
 
@@ -97,6 +157,17 @@
   .box__poster {
     width: 450px;
   }
+
+  .loader__container {
+    margin-left: 320px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .loader__container {
+    margin-left: 290px;
+    gap: 0;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -111,6 +182,10 @@
 
   .box__poster {
     width: 400px;
+  }
+
+  .loader__container {
+    margin-left: 260px;
   }
 }
 
@@ -129,6 +204,16 @@
 
   .form {
     padding-top: 25px;
+  }
+
+  .loader__container {
+    margin-left: 220px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .loader__container {
+    margin-left: 180px;
   }
 }
 
@@ -153,6 +238,11 @@
 
   .box__poster {
     width: 400px;
+  }
+
+  .loader__container {
+    margin: 0;
+    margin-top: 40px;
   }
 }
 
