--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,11 @@
   background-color: #006aaf;
 }
 
+.active__page {
+  background-color: #000;
+  color: white;
+}
+
 .loader__container {
   margin-left: 420px;
   margin-top: 100px;
